--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
       </div>
       <div class="content">
         <article class="card">
-          <a href="#"><img
-            src="./asset/img/pexels-chevanon-photography-302890.jpg"
-            alt="Latte art"
+          <a href="#"
+            ><img
+              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              alt="Latte art"
           /></a>
           <div class="card-text">
             <h2><a href="#">Test</a></h2>
@@ -54,9 +55,10 @@
           </div>
         </article>
         <article class="card">
-          <a href="#"><img
-            src="./asset/img/pexels-chevanon-photography-302890.jpg"
-            alt="Latte art"
+          <a href="#"
+            ><img
+              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              alt="Latte art"
           /></a>
           <div class="card-text">
             <h2><a href="#">Test</a></h2>
@@ -67,9 +69,10 @@
           </div>
         </article>
         <article class="card">
-          <a href="#"><img
-            src="./asset/img/pexels-chevanon-photography-302890.jpg"
-            alt="Latte art"
+          <a href="#"
+            ><img
+              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              alt="Latte art"
           /></a>
           <div class="card-text">
             <h2><a href="#">Test</a></h2>
@@ -80,9 +83,10 @@
           </div>
         </article>
         <article class="card">
-          <a href="#"><img
-            src="./asset/img/pexels-chevanon-photography-302890.jpg"
-            alt="Latte art"
+          <a href="#"
+            ><img
+              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              alt="Latte art"
           /></a>
           <div class="card-text">
             <h2><a href="#">Test</a></h2>
@@ -93,9 +97,10 @@
           </div>
         </article>
         <article class="card">
-          <a href="#"><img
-            src="./asset/img/pexels-chevanon-photography-302890.jpg"
-            alt="Latte art"
+          <a href="#"
+            ><img
+              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              alt="Latte art"
           /></a>
           <div class="card-text">
             <h2><a href="#">Test</a></h2>
@@ -106,9 +111,38 @@
           </div>
         </article>
         <article class="card">
-          <a href="#"><img
-            src="./asset/img/pexels-chevanon-photography-302890.jpg"
-            alt="Latte art"
+          <a href="#"
+            ><img
+              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              alt="Latte art"
+          /></a>
+          <div class="card-text">
+            <h2><a href="#">Test</a></h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+              delectus,
+            </p>
+          </div>
+        </article>
+        <article class="card">
+          <a href="#"
+            ><img
+              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              alt="Latte art"
+          /></a>
+          <div class="card-text">
+            <h2><a href="#">Test</a></h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+              delectus,
+            </p>
+          </div>
+        </article>
+        <article class="card">
+          <a href="#"
+            ><img
+              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              alt="Latte art"
           /></a>
           <div class="card-text">
             <h2><a href="#">Test</a></h2>
@@ -119,7 +153,41 @@
           </div>
         </article>
       </div>
-      <aside></aside>
+      <aside>
+        <div class="sidebar">
+          <section class="sidebar-card">
+            <a href="#"
+              ><img
+                src="./asset/img/pexels-chevanon-photography-302890.jpg"
+                alt="Latte art"
+            /></a>
+            <div class="card-text">
+              <h2><a href="#">Test</a></h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Obcaecati delectus,
+              </p>
+            </div>
+          </section>
+          <section class="sidebar-card">
+            <a href="#"
+              ><img
+                src="./asset/img/pexels-chevanon-photography-302890.jpg"
+                alt="Latte art"
+            /></a>
+            <div class="card-text">
+              <h2><a href="#">Test</a></h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Obcaecati delectus,
+              </p>
+            </div>
+          </section>
+        </div>
+      </aside>
     </main>
+    <footer>
+      <p>Belajar Dasar Pemrograman Web &#169; 2019, Dicoding Academy</p>
+    </footer>
   </body>
 </html>
