--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     />
   </head>
   <body>
-    <header class="navbar-container">
+    <header>
       <div class="page-tittle">
         <h1><a href="#">Coffee Blog</a></h1>
       </div>
-      <nav class="nav-list">
+      <nav>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Brew Guides</a></li>
@@ -35,7 +35,7 @@
             alt="Coffee Shop"
           />
           <div class="headline-text">
-            <h2><a href="#">Check the Top 10 Coffee Shop in Bandung</a></h2>
+            <h2><a href="#">Top 10 Coffee Shop in Bandung</a></h2>
           </div>
         </article>
       </div>
@@ -47,7 +47,7 @@
               alt="Latte art"
           /></a>
           <div class="card-text">
-            <h2><a href="#">Test</a></h2>
+            <h2><a href="#">How To Make Latte at Home</a></h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
               delectus,
@@ -57,11 +57,11 @@
         <article class="card">
           <a href="#"
             ><img
-              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              src="./asset/img/jon-tyson-uJ_GU9hwWgU-unsplash.jpg"
               alt="Latte art"
           /></a>
           <div class="card-text">
-            <h2><a href="#">Test</a></h2>
+            <h2><a href="#">Top Recipes That You Can Try At Home</a></h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
               delectus,
@@ -71,11 +71,11 @@
         <article class="card">
           <a href="#"
             ><img
-              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              src="./asset/img/michal-parzuchowski-ItaV89TNkks-unsplash.jpg"
               alt="Latte art"
           /></a>
           <div class="card-text">
-            <h2><a href="#">Test</a></h2>
+            <h2><a href="#">Here is Tip to Order at Cafe</a></h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
               delectus,
@@ -85,11 +85,11 @@
         <article class="card">
           <a href="#"
             ><img
-              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              src="./asset/img/jonathan-borba-21tOEaJPM_o-unsplash.jpg"
               alt="Latte art"
           /></a>
           <div class="card-text">
-            <h2><a href="#">Test</a></h2>
+            <h2><a href="#">Feeling Adventurous? Try Order This!</a></h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
               delectus,
@@ -99,11 +99,11 @@
         <article class="card">
           <a href="#"
             ><img
-              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              src="./asset/img/tabitha-turner-F0Wd4djYvSA-unsplash.jpg"
               alt="Latte art"
           /></a>
           <div class="card-text">
-            <h2><a href="#">Test</a></h2>
+            <h2><a href="#">Love Milk? Try This Coffee</a></h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
               delectus,
@@ -113,11 +113,11 @@
         <article class="card">
           <a href="#"
             ><img
-              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              src="./asset/img/pexels-igor-haritanovich-1695052.jpg"
               alt="Latte art"
           /></a>
           <div class="card-text">
-            <h2><a href="#">Test</a></h2>
+            <h2><a href="#">Tips to Choose Coffee Bean</a></h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
               delectus,
@@ -127,11 +127,11 @@
         <article class="card">
           <a href="#"
             ><img
-              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              src="./asset/img/pexels-livier-garcia-1459339.jpg"
               alt="Latte art"
           /></a>
           <div class="card-text">
-            <h2><a href="#">Test</a></h2>
+            <h2><a href="#">Top List Coffee Producing Countries</a></h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
               delectus,
@@ -141,11 +141,11 @@
         <article class="card">
           <a href="#"
             ><img
-              src="./asset/img/pexels-chevanon-photography-302890.jpg"
+              src="./asset/img/pexels-quang-nguyen-vinh-2159106.jpg"
               alt="Latte art"
           /></a>
           <div class="card-text">
-            <h2><a href="#">Test</a></h2>
+            <h2><a href="#">Guide to Make Coffee Using Pour Over Technique</a></h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
               delectus,
@@ -155,14 +155,15 @@
       </div>
       <aside>
         <div class="sidebar">
+          <h2>Check Our Latest Product :</h2>
           <section class="sidebar-card">
             <a href="#"
               ><img
-                src="./asset/img/pexels-chevanon-photography-302890.jpg"
+                src="./asset/img/pexels-darina-belonogova-8004599.jpg"
                 alt="Latte art"
             /></a>
             <div class="card-text">
-              <h2><a href="#">Test</a></h2>
+              <h2><a href="#">Grinder</a></h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Obcaecati delectus,
@@ -172,11 +173,11 @@
           <section class="sidebar-card">
             <a href="#"
               ><img
-                src="./asset/img/pexels-chevanon-photography-302890.jpg"
+                src="./asset/img/pexels-darina-belonogova-8004540.jpg"
                 alt="Latte art"
             /></a>
             <div class="card-text">
-              <h2><a href="#">Test</a></h2>
+              <h2><a href="#">Starter Kit</a></h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Obcaecati delectus,
@@ -187,7 +188,7 @@
       </aside>
     </main>
     <footer>
-      <p>Belajar Dasar Pemrograman Web &#169; 2019, Dicoding Academy</p>
+      <p>Coffee Blog &#169; 2023, Muhamamad Rafi Fauzan</p>
     </footer>
   </body>
 </html>
